added bofla, bpla vulns

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,6 +28,13 @@ http {
         listen 80;
         server_name api.taintedport.com;
 
+        # Serve OpenAPI spec
+        location = /openapi.yaml {
+            alias /var/www/backend/openapi.yaml;
+            add_header Content-Type "text/yaml; charset=utf-8";
+            add_header Access-Control-Allow-Origin "*";
+        }
+
         # VULN: Directory listing enabled on /files/
         location /files/ {
             alias /var/www/backend/;
