Changed the SQLis

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -35,6 +35,13 @@ http {
             add_header Access-Control-Allow-Origin "*";
         }
 
+        # Serve Known Vulnerabilities
+        location = /KnownVulnerabilities.txt {
+            alias /var/www/backend/KnownVulnerabilities.txt;
+            add_header Content-Type "text/plain; charset=utf-8";
+            add_header Access-Control-Allow-Origin "*";
+        }
+
         # VULN: Directory listing enabled on /files/
         location /files/ {
             alias /var/www/backend/;
@@ -77,6 +84,13 @@ http {
             alias /var/www/backend/;
             autoindex on;
             autoindex_format html;
+        }
+
+        # Serve Known Vulnerabilities
+        location = /KnownVulnerabilities.txt {
+            alias /var/www/backend/KnownVulnerabilities.txt;
+            add_header Content-Type "text/plain; charset=utf-8";
+            add_header Access-Control-Allow-Origin "*";
         }
 
         # --- /api/* path-based routing (for local Docker) ---
