--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -27,7 +27,7 @@ command=node /var/www/frontend/server.js
 directory=/var/www/frontend
 autostart=true
 autorestart=true
-environment=NODE_ENV="production",PORT="3000",HOSTNAME="0.0.0.0"
+environment=NODE_ENV="production",PORT="3000",HOSTNAME="0.0.0.0",ADMIN_USER="%(ENV_ADMIN_USER)s",ADMIN_PASS="%(ENV_ADMIN_PASS)s"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
